--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Homepage</title>
 </head>
 <body>
-    <div>
+    <div class="welkom-title col-xs-offset-3 col-xs-6 align-middle">
         <h1>
             Welkom
         </h1>
