--- a/index.html
+++ b/index.html
@@ -1,15 +1,4 @@
-<?php
-// Initialize the session
-session_start();
- 
-// Check if the user is logged in, if not then redirect him to login page
-if(!isset($_SESSION["loggedin"]) || $_SESSION["loggedin"] !== true){
-    header("location: login.php");
-    exit;
-}
-?>
- 
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
@@ -47,11 +36,8 @@ if(!isset($_SESSION["loggedin"]) || $_SESSION["loggedin"] !== true){
               </li>
               <li><a href="#">File</a></li>
               <li><a href="#">Account</a></li>
-              <li><a href="logout.php">Sign Out of Your Account</a></li>
-              <li><a href="#"><?php echo htmlspecialchars($_SESSION["username"]); ?></a></li>
-              
+              <li><a href="login">Log in</a></li>
           </ul>
-
         </div>
     </div>
 </nav>
