--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   </a>
                   <ul class="dropdown-menu">
                       <li><a href="#">English</a></li>
-                      <li><a href="#">Dutch</a></li>
+                      <li><a href="#">Dutch</a></li>    
                       <li><a href="#">German</a></li>
                   </ul>
               </li>
@@ -58,5 +58,19 @@
             dolorem repellendus consequatur suscipit aperiam!
         </p>
     </div>
+    <footer>
+        <div class="footer-top col-lg-6">
+        <h3>
+            Contact
+        </h3>
+        <a href="mailto:example@gmail.com">example@gmail.com</a>
+        <a href="Tel:0651036882">06-51036882</a>
+    </div>
+    <div class="footer-bottom col-lg-6">
+        <h3>
+            Links
+        </h3>
+</div>  
+    </footer>
 </body>
 </html>
