--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
             layout: google.translate.TranslateElement.InlineLayout.SIMPLE
           }, 'google_translate_element');
         }
-      </script><script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+      </script>
+      <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+
+      </script>
       <style>
         .goog-te-gadget-simple {
-          background: none!important;
-          border:none!important;
+          background: white!important;
+          border:5px solid black!important;
           position: absolute!important;
           left: 0!important;
           top: 0px!important;
@@ -21,7 +24,7 @@
        
         }
         #google_translate_element .goog-te-menu-value span {
-          color: #0047AB!important
+          color: #0047AB!important;
         }
       </style>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
@@ -35,7 +38,7 @@
     <title>Homepage</title>
 </head>
 <body>
-    <div id="google_translate_element"></div>
+
 <nav class="navbar navbar-default">
 
     <div class="container-fluid">
@@ -56,9 +59,7 @@
                       Language <span class="caret"></span>
                   </a>
                   <ul class="dropdown-menu">
-                      <li><a href="#">English</a></li>
-                      <li><a href="#">Dutch</a></li>    
-                      <li><a href="#">German</a></li>
+                      <li><div id="google_translate_element"></div></li>
                   </ul>
               </li>
               <li><a href="#">File</a></li>
