--- a/index.html
+++ b/index.html
@@ -1,33 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
+    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script>
         function googleTranslateElementInit() {
-          new google.translate.TranslateElement({
-            pageLanguage: 'nl',
-            multilanguagePage: true,
-            layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-          }, 'google_translate_element');
+            new google.translate.TranslateElement({
+                pageLanguage: 'nl',
+                includedLanguages: 'en,es,nl,fr', // Add the languages you want, separated by commas
+                layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+            }, 'google_translate_element');
         }
-      </script>
-      <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-
-      </script>
-      <style>
-        .goog-te-gadget-simple {
-          background: white!important;
-          border:5px solid black!important;
-          position: absolute!important;
-          left: 0!important;
-          top: 0px!important;
-          z-index: 11!important;
-       
-        }
-        #google_translate_element .goog-te-menu-value span {
-          color: #0047AB!important;
-        }
-      </style>
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -36,10 +19,9 @@
     <link rel="stylesheet" href="style.css"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>XXL-Uitzendbureau</title>
 </head>
 <body>
-
 <nav class="navbar navbar-default">
 
     <div class="container-fluid">
