--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
 
     <div class="welkom-title col-xs-offset-1 col-xs-10 col-sm-8 col-sm-offset-3 col-md-6 col-lg-6">
         <h1>
-            Welkom
+            Welkom bij XXL-Uitzendbureau!
         </h1>
-        <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            <br> 
-            Ullam atque, asperiores pariatur deserunt cum facere accusantium voluptatibus odio. 
+        <p style="max-width: 450px;">
+            wij zijn een snelgroeiend bedrijf met veel mogelijkheden voor een baan. Onze baan garantie is 99%! 
             <br>
             <br>
-            beatae laboriosam tenetur quas tempora laudantium quo,
-            <br> 
-            dolorem repellendus consequatur suscipit aperiam!
+            Kom bij ons langs voor een gesprek om vragen te stellen en kennis te maken.
         </p>
+    </div>
+    <div class="images col-xs-12 container-fluid">
+        <img src="images/image1.jpg" alt="XXL-Uitzendbureau">
+        <img src="images/image2.jpg" alt="XXL-Uitzendbureau">
     </div>
     <footer>
         <div class="footer-top col-lg-6">
