--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   </ul>
               </li>
               <li><a href="#">File</a></li>
-              <li><a href="#">Account</a></li>
+              <li><a href="editaccountpagina">Account</a></li>
               <li><a href="login">Log in</a></li>
           </ul>
           
