--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="chat">Chat</a></li>
               <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                       Language <span class="caret"></span>
